# Dwellio-MVP

./: .env.example  .gitignore  FINAL_MANIFEST.md  Makefile  README.md  dwellio_architecture_diagram_and_index (2).md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  admin.py  cases.py  leads.py  parcel.py  quote.py  router.py  search.py
app/core/: __init__.py  config.py  lifecycle.py
app/db/: __init__.py  connection.py
app/ingestion/: __init__.py  archive.py  gis.py  historical_backfill.py  manual_backfill.py  registry.py  repository.py  service.py  source_registry.py
app/jobs/: cli.py  job_comp_candidates.py  job_features.py  job_fetch_sources.py  job_geocode_repair.py  job_inspect_ingestion.py  job_load_staging.py  job_normalize.py  job_packet_refresh.py  job_refresh_instant_quote.py  job_refresh_quote_cache.py  job_rollback_publish.py  runner.py  (+6 more)
docs/: Dwellio Codex Execution Sequence.md  architecture-state.md  build-order-checklist.md  canonical_schema.md  codex-architecture-map.md  codex-build-playbook.md  codex-session-start.md  codex-task-prompts.md  county_config_mappings.md  exemption_model.md  final_implementation_summary.md  fort_bend_adapter.md  harris_adapter.md  ingestion_framework.md  ownership_reconciliation.md  parcel_summary_views.md  public_parcel_summary_stage13.md  search_api_examples.md  source_registry.md  stage14_protest_support_foundation.md  stage16_lead_funnel_backend_contract.md  stage16_lead_funnel_frontend_ux.md  tax_unit_assignment.md
infra/: __init__.py
sql/: dwellio_full_schema.sql
supabase/: config.toml
(+458 files in other folders)
